# cmake-zh

./: .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  README.md  flake.nix  pyproject.toml
docs/: conf.py  requirements.txt
locales/zh_CN/LC_MESSAGES/: command.po  cpack_gen.po  envvar.po  generator.po  guide.po  index.po  manual.po  module.po  policy.po  prop_cache.po  prop_dir.po  prop_gbl.po  prop_inst.po  prop_sf.po  prop_test.po  prop_tgt.po  release.po  sphinx.po  variable.po
scripts/: git-commit.sh  post-git-commit.sh
